draw-app/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: draw-app
  namespace: draw-app
spec:
  port:
    targetPort: 8001-tcp
  to:
    kind: Service
    name: draw-app
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
